--- a/aboutUs.html
+++ b/aboutUs.html
@@ -189,7 +189,7 @@
                     <img class="chevron_img" src="./assets/general/ChevronDownWhite.webp" alt="chevron-down">
                     </li>
                     <li class="nav-item d-flex">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="./contact.html">Contact Us</a>
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                 </ul>
@@ -687,7 +687,7 @@
                         <div class="col-md-3 col-6 right-side">
                             <h6 class="fw-medium text-white mb-3">Helps</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Contact</a></li>
+                                <li><a href="./contact.html" target="_blank" class="text-secondary text-decoration-none">Contact</a></li>
                                 <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Faqs</a></li>
                                 <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Terms & Condition</a></li>
                                 <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Privacy Policy</a></li>
@@ -696,7 +696,7 @@
                         <div class="col-md-3 col-6 right-side">
                             <h6 class="fw-medium text-white mb-3">Proxy</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">About</a></li>
+                                <li><a href="./aboutUs.html" target="_blank" class="text-secondary text-decoration-none">About</a></li>
                                 <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Shop</a></li>
                                 <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Product</a></li>
                                 <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Track Order</a></li>
@@ -730,7 +730,5 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-
-
 </body>
 </html>
