Ecopazar Project update

--- a/shop.html
+++ b/shop.html
@@ -189,7 +189,7 @@
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                     <li class="nav-item d-flex">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="./contact.html">Contact Us</a>
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                 </ul>
@@ -942,7 +942,7 @@
                         <div class="col-md-3 col-6 right-side">
                             <h6 class="fw-medium text-white mb-3">Helps</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Contact</a></li>
+                                <li><a href="./contact.html" target="_blank" class="text-secondary text-decoration-none">Contact</a></li>
                                 <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Faqs</a></li>
                                 <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Terms & Condition</a></li>
                                 <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Privacy Policy</a></li>
