--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                                     ENG
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">ENG</a></li>
-                                    <li><a class="dropdown-item" href="#">AR</a></li>                                
+                                    <li class="dropdown-item">ENG</li>
+                                    <li class="dropdown-item">AR</li>                                
                                 </ul>
                             </li>
                             <li class="nav-item dropdown list-unstyled">
@@ -47,13 +47,13 @@
                                     USD
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">USD</a></li>
-                                    <li><a class="dropdown-item" href="#">NIS</a></li>                               
+                                    <li class="dropdown-item">USD</li>
+                                    <li class="dropdown-item">NIS</li>                               
                                 </ul>
                             </li>
                             <div class="sign border-start ps-3">
-                                <a href="#" class="ms-2 me-1 text-decoration-none bar-color">Sign In</a> /
-                                <a href="#" class="ms-1 text-decoration-none bar-color">Sign Up</a>
+                                <a href="./sign_in.html" class="ms-2 me-1 text-decoration-none bar-color">Sign In</a> /
+                                <a href="./sign_up.html" class="ms-1 text-decoration-none bar-color">Sign Up</a>
                             </div>
                             
                         </div>
@@ -1813,8 +1813,8 @@
                         <div class="col-md-3 col-6 right-side">
                             <h6 class="fw-medium text-white mb-3">My Account</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">My Account</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Order History</a></li>
+                                <li><a href="./dashboard.html" target="_blank" class="text-secondary text-decoration-none">My Account</a></li>
+                                <li><a href="./order_history.html" target="_blank" class="text-secondary text-decoration-none">Order History</a></li>
                                 <li><a href="./shopping_cart.html" target="_blank" class="text-secondary text-decoration-none">Shopping Cart</a></li>
                                 <li><a href="./wishlist.html" target="_blank" class="text-secondary text-decoration-none">Wishlist</a></li>
                             </ul>
