--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
                                     ENG
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">ENG</a></li>
-                                    <li><a class="dropdown-item" href="#">AR</a></li>                                
+                                    <li class="dropdown-item">ENG</li>
+                                    <li class="dropdown-item">AR</li>                                
                                 </ul>
                             </li>
                             <li class="nav-item dropdown list-unstyled">
@@ -46,13 +46,13 @@
                                     USD
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">USD</a></li>
-                                    <li><a class="dropdown-item" href="#">NIS</a></li>                               
+                                    <li class="dropdown-item">USD</li>
+                                    <li class="dropdown-item">NIS</li>                               
                                 </ul>
                             </li>
                             <div class="sign border-start ps-3">
-                                <a href="#" class="ms-2 me-1 text-decoration-none bar-color">Sign In</a> /
-                                <a href="#" class="ms-1 text-decoration-none bar-color">Sign Up</a>
+                                <a href="./sign_in.html" class="ms-2 me-1 text-decoration-none bar-color">Sign In</a> /
+                                <a href="./sign_up.html" class="ms-1 text-decoration-none bar-color">Sign Up</a>
                             </div>
                             
                         </div>
