--- a/dashboard.html
+++ b/dashboard.html
@@ -177,7 +177,7 @@
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                     <li class="nav-item d-flex">
-                    <a class="nav-link" href="#">Pages</a>
+                    <a class="nav-link" href="./error_page.html">Pages</a>
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                     <li class="nav-item d-flex">
@@ -202,7 +202,7 @@
     </nav>
 
     <main>
-        <section class="blogs ">
+        <section class="blogs">
             <div class="blogs_header py-4">   
                 <div class="container d-flex flex-row align-items-center gap-2 font-poppins">
                     <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb"
@@ -214,10 +214,10 @@
                                 </a>
                             </li>                            
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
-                                <a href="#" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none" style="font-size: 1rem;">Account</a>
+                                <a href="#" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none fs-6">Account</a>
                             </li>
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
-                                <span class="fw-normal font-poppins text_mainColor mt-1" style="font-size: 1rem;">Dashboard</span>
+                                <span class="fw-normal font-poppins text_mainColor mt-1 fs-6">Dashboard</span>
                             </li>
                         </ol>
                     </nav>
@@ -236,7 +236,7 @@
                             <a href="./wishlist.html" class="list-group-item list-group-item-action list_dashboard border-bottom-0"><img src="./assets/dashboard_page/wishlist.webp" class="pe-2" alt="Wishlist Icon"> Wishlist</a>
                             <a href="./shopping_cart.html" class="list-group-item list-group-item-action list_dashboard border-bottom-0"><img src="./assets/dashboard_page/cart.webp" class="pe-2" alt="Cart Icon"> Shopping Cart</a>
                             <a href="./settings.html" class="list-group-item list-group-item-action list_dashboard border-bottom-0"><img src="./assets/dashboard_page/settings.webp" class="pe-2" alt="Settings Icon"> Settings</a>
-                            <a href="#" class="list-group-item list-group-item-action list_dashboard "><img src="./assets/dashboard_page/log-out.webp" class="pe-2" alt="Logout Icon"> Log-out</a>
+                            <a href="#" class="list-group-item list-group-item-action list_dashboard"><img src="./assets/dashboard_page/log-out.webp" class="pe-2" alt="Logout Icon"> Log-out</a>
                         </div>
                     </div>
 
@@ -246,7 +246,7 @@
                                 <img src="./assets/dashboard_page/DianneRussell.webp" class="rounded-circle mb-2" alt="User Image">
                                 <h5 class="mb-0 fw-medium">Dianne Russell</h5>
                                 <small class="text-secondary">Customer</small><br>
-                                <a href="#" class="btn fs-6 fw-medium text_mainColor p-0 mt-1 text-decoration-none">Edit Profile</a>
+                                <a href="./settings.html" class="btn fs-6 fw-medium text_mainColor p-0 mt-1 text-decoration-none">Edit Profile</a>
                             </div>
 
                             <div class="col-md-6 border rounded-2 p-4">
@@ -255,7 +255,7 @@
                                 <p class="mb-2 text-muted small fw-normal">4140 Parker Rd. Allentown, New Mexico 31134</p>
                                 <p class="mb-2 fs-6 fw-medium">dainne.ressell@gmail.com</p>
                                 <p class="mb-2 fs-6 fw-medium">(671) 555-0110</p>
-                                <a href="#" class="btn fs-6 fw-medium text_mainColor p-0 mt-1 text-decoration-none">Edit Address</a>
+                                <a href="./settings.html" class="btn fs-6 fw-medium text_mainColor p-0 mt-1 text-decoration-none">Edit Address</a>
                             </div>
                         </div>
 
@@ -388,9 +388,9 @@
                             <h6 class="fw-medium text-white mb-3">Helps</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
                                 <li><a href="./contact.html" target="_blank" class="text-secondary text-decoration-none">Contact</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Faqs</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Terms & Condition</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Privacy Policy</a></li>
+                                <li><a href="./faqs.html" target="_blank" class="text-secondary text-decoration-none">Faqs</a></li>
+                                <li><a href="./faqs.html" target="_blank" class="text-secondary text-decoration-none">Terms & Condition</a></li>
+                                <li><a href="./faqs.html" target="_blank" class="text-secondary text-decoration-none">Privacy Policy</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-6 right-side">
@@ -398,17 +398,17 @@
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
                                 <li><a href="./aboutUs.html" target="_blank" class="text-secondary text-decoration-none">About</a></li>
                                 <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Shop</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Product</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Track Order</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Product</a></li>
+                                <li><a href="./order_details.html" target="_blank" class="text-secondary text-decoration-none">Track Order</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-6 right-side">
                             <h6 class="fw-medium text-white mb-3">Categories</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Fruit & Vegetables</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Meat & Fish</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Bread & Bakery</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Beauty & Health</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Fruit & Vegetables</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Meat & Fish</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Bread & Bakery</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Beauty & Health</a></li>
                             </ul>
                         </div>
                     </div>    
