--- a/faqs.html
+++ b/faqs.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class="header">    
-        <!---------------Top Bar--------------------->
+    <!---------------Top Bar--------------------->
         <div class="py-2 border-bottom bg-white">
             <div class="container">
                 <div class="row align-items-center justify-content-between font-poppins top-bar">
@@ -169,8 +169,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-3">
                     <li class="nav-item d-flex">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                    <img class="chevron_img" src="./assets/general/ChevronDownWhite.webp" alt="chevron-down">
+                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                    <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                     <li class="nav-item d-flex">
                     <a class="nav-link" href="./shop.html">Shop</a>
@@ -200,11 +200,11 @@
             </div>
         </div>
     </nav>
-
+    
     <main>
-        <section class="shopping_header">
-            <div class="shopping_cart_header py-5">   
-                <div class="container d-flex flex-row align-items-center gap-2">
+        <section class="blogs">
+            <div class="blogs_header py-4">   
+                <div class="container d-flex flex-row align-items-center gap-2 font-poppins">
                     <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb"
                         aria-label="breadcrumb">
                         <ol class="breadcrumb d-flex flex-row align-items-center gap-2 mb-0">
@@ -212,120 +212,49 @@
                                 <a href="./index.html">
                                     <img src="./assets/wishlist_page/home_icon.webp" alt="Home Icon" style="width: 20px; height: 20px;" />
                                 </a>
-                            </li>                            
+                            </li>                                                        
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
-                                <span class="fw-normal font-poppins text_mainColor mt-1 fs-6">Shopping cart</span>
+                                <span class="fw-normal font-poppins text_mainColor mt-1 fs-6">Faqs</span>
                             </li>
                         </ol>
                     </nav>
                 </div>
             </div>
         </section>
-        
-        <section class="shopping_cart py-5">
-            <div class="container font-poppins mb-5">
-                <h2 class="fw-semibold text-center mb-5">My Shopping Cart</h2>
-                <div class="row g-4">
-                    <div class="col-lg-8">
-                        <div class="table-responsive bg-white border rounded-3 p-3">
-                        <table class="table align-middle ">
-                            <thead class="border-bottom">
-                            <tr class="text-uppercase">
-                                <th class="col text-secondary fw-medium small">Product</th>
-                                <th class="col text-secondary fw-medium small">Price</th>
-                                <th class="col text-secondary fw-medium small">Quantity</th>
-                                <th class="col text-secondary fw-medium small">Subtotal</th>
-                                <th class="col"></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <div class="d-flex align-items-center gap-3">
-                                            <img src="./assets/popular_products/GreenCapsicum.webp" class="shopping_cart_img" alt="Green Capsicum">
-                                            <span class="fs-6 fw-normal">Green Capsicum</span>
-                                        </div>
-                                    </td>
-                                    <td class="fs-6 fw-normal">$14.00</td>
-                                    <td>
-                                    <div class="d-flex align-items-center border rounded-pill px-2 py-1 justify-content-between" style="width: 6.875rem">
-                                        <button class="btn btn-sm p-0 border-0">−</button>
-                                            <input type="number" class="form-control border-0 text-center fw-bold px-0" value="5" min="1" style="width: 1.875rem; font-size: 1rem;" />
-                                        <button class="btn btn-sm p-0 border-0">+</button>
-                                    </div>
-                                    </td>
-                                    <td class="fs-6 fw-medium">$70.00</td>
-                                    <td>
-                                    <div class="rounded-circle bg-transparent border p-2 d-flex justify-content-center align-items-center" style="width: 1.5rem; height: 1.5rem;">
-                                        <button type="button" class="btn-close" aria-label="Close"></button>
-                                    </div>
-                                    </td>
-                                </tr>
 
-                                <tr>
-                                    <td>
-                                    <div class="d-flex align-items-center gap-3">
-                                        <img src="./assets/popular_products/RedChili.webp" class="shopping_cart_img" alt="Red Capsicum">
-                                        <span class="fs-6 fw-normal">Red Capsicum</span>
-                                    </div>
-                                    </td>
-                                    <td class="fs-6 fw-normal">$14.00</td>
-                                    <td>
-                                    <div class="d-flex align-items-center border rounded-pill px-2 py-1 justify-content-between" style="width: 6.875rem">
-                                        <button class="btn btn-sm p-0 border-0">−</button>                                
-                                            <input type="number" class="form-control border-0 text-center fw-bold px-0" value="5" min="1" style="width: 1.875rem; font-size: 1rem;" />
-                                        <button class="btn btn-sm p-0 border-0">+</button>
-                                    </div>
-                                    </td>
-                                    <td class="fs-6 fw-medium">$14.00</td>
-                                    <td>
-                                    <div class="rounded-circle bg-transparent border p-2 d-flex justify-content-center align-items-center" style="width: 1.5rem; height: 1.5rem;">
-                                        <button type="button" class="btn-close" aria-label="Close"></button>
-                                    </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-
-                        <div class="d-flex justify-content-between mt-4">
-                            <a href="./shop.html" class="btn btn-light rounded-pill small fw-semibold py-2 px-4">Return to shop</a>
-                            <button class="btn btn-light rounded-pill small fw-semibold py-2 px-4">Update Cart</button>
-                        </div>
-                        </div>
-
-                        <div class="bg-white border p-3 mt-4 d-flex align-items-center justify-content-between">
-                            <label class="form-label m-0 me-3 fs-5 fw-medium text-nowrap">Coupon Code</label>
-                            <form class="subcribe_form w-100 ms-4 d-flex bg-white overflow-hidden">
-                                <input type="text" class="form-control me-2 border-0 flex-grow-1" placeholder="Enter code">
-                                <button class="btn text-white border-0 rounded-pill fs-6 fw-semibold">Apply Coupon</button>
-                            </form>
-                        </div>
+        <section class="sign py-5 d-flex justify-content-center align-items-center font-poppins">
+            <div class="card shadow-lg border-0 p-4">
+                <h2 class="text-center mb-4 fw-semibold">Sign In</h2>
+                <form>               
+                    <div class="mb-2">
+                        <input type="email" class="form-control" placeholder="Email">
                     </div>
 
-                    <div class="col-lg-4">
-                        <div class="bg-white border rounded-3 p-4">
-                        <h5 class="fw-medium fs-5 mb-4">Cart Total</h5>
-                        <div class="d-flex justify-content-between mb-2 py-2">
-                            <span class="fw-normal small text-secondary">Subtotal:</span>
-                            <span class="fw-medium small">$84.00</span>
-                        </div>
-                        <div class="d-flex justify-content-between mb-2 py-2 border-top">
-                            <span class="fw-normal small text-secondary">Shipping:</span>
-                            <span class="fw-medium small">Free</span>
-                        </div>                        
-                        <div class="d-flex justify-content-between mb-2 py-2 border-top">
-                            <span class="fw-normal fs-6 text-secondary">Total:</span>
-                            <span class="fw-semibold fs-6">$84.00</span>
-                        </div>
-                        <a href="./checkout.html" class="btn btn-outline-secondary bg_mainColor text-white w-100 rounded-pill mt-3 py-2 fw-semibold">Proceed to checkout</a>
-                        </div>
+                    <div class="mb-2 position-relative">
+                        <input type="password" class="form-control" placeholder="Password">                        
+                        <i class="fa-regular fa-eye position-absolute top-50 end-0 translate-middle-y me-3"></i>
                     </div>
-                </div>
+
+                    <div class="d-flex justify-content-between align-items-center mb-3 small">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="rememberMe">
+                            <label class="form-check-label text-muted" for="rememberMe">
+                                Remember me
+                            </label>
+                        </div>
+                        <a href="#" class="text-decoration-none text-muted">Forget Password</a>
+                    </div>
+
+                    <div class="d-grid mb-3">
+                        <button type="submit" class="btn btn-outline-success bg_mainColor text-white rounded-pill">Login</button>
+                    </div>
+
+                    <p class="text-muted text-center small mb-0">Don't have account? <a href="./sign_up.html" class="fw-medium text-dark text-decoration-none">Register</a></p>
+                </form>
             </div>
         </section>
 
-
-        <section class="subcribe py-4">
+         <section class="subcribe py-4">
             <div class="container font-poppins">
                 <div class="row justify-content-center align-items-center">
                     <div class="col-lg-5 col-md-6 mb-3 mb-md-0">
@@ -354,6 +283,7 @@
             </div>
         </section>
     </main>
+
     <footer class="footer text-white py-4">
         <div class="container">
             <div class="row g-4 justify-content-between">
@@ -378,7 +308,7 @@
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
                                 <li><a href="./dashboard.html" target="_blank" class="text-secondary text-decoration-none">My Account</a></li>
                                 <li><a href="./order_history.html" target="_blank" class="text-secondary text-decoration-none">Order History</a></li>
-                                <li><a href="./shopping_cart.html" target="_blank" class="text-white text-decoration-none">Shopping Cart</a></li>
+                                <li><a href="./shopping_cart.html" target="_blank" class="text-secondary text-decoration-none">Shopping Cart</a></li>
                                 <li><a href="./wishlist.html" target="_blank" class="text-secondary text-decoration-none">Wishlist</a></li>
                             </ul>
                         </div>
