--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                     <li class="nav-item d-flex">
-                    <a class="nav-link" href="#">Pages</a>
+                    <a class="nav-link" href="./error_page.html">Pages</a>
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                     <li class="nav-item d-flex">
@@ -1823,9 +1823,9 @@
                             <h6 class="fw-medium text-white mb-3">Helps</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
                                 <li><a href="./contact.html" target="_blank" class="text-secondary text-decoration-none">Contact</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Faqs</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Terms & Condition</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Privacy Policy</a></li>
+                                <li><a href="./faqs.html" target="_blank" class="text-secondary text-decoration-none">Faqs</a></li>
+                                <li><a href="./faqs.html" target="_blank" class="text-secondary text-decoration-none">Terms & Condition</a></li>
+                                <li><a href="./faqs.html" target="_blank" class="text-secondary text-decoration-none">Privacy Policy</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-6 right-side">
@@ -1833,17 +1833,17 @@
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
                                 <li><a href="./aboutUs.html" target="_blank" class="text-secondary text-decoration-none">About</a></li>
                                 <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Shop</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Product</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Track Order</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Product</a></li>
+                                <li><a href="./order_details.html" target="_blank" class="text-secondary text-decoration-none">Track Order</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-6 right-side">
                             <h6 class="fw-medium text-white mb-3">Categories</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Fruit & Vegetables</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Meat & Fish</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Bread & Bakery</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Beauty & Health</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Fruit & Vegetables</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Meat & Fish</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Bread & Bakery</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Beauty & Health</a></li>
                             </ul>
                         </div>
                     </div>    
