--- a/sign_up.html
+++ b/sign_up.html
@@ -177,7 +177,7 @@
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                     <li class="nav-item d-flex">
-                    <a class="nav-link" href="#">Pages</a>
+                    <a class="nav-link" href="./error_page.html">Pages</a>
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                     <li class="nav-item d-flex">
@@ -210,14 +210,14 @@
                         <ol class="breadcrumb d-flex flex-row align-items-center gap-2 mb-0">
                             <li class="breadcrumb-item d-flex align-items-center">
                                 <a href="./index.html">
-                                    <img src="./assets/wishlist_page/home_icon.webp" alt="Home Icon" style="width: 20px; height: 20px;" />
+                                    <img src="./assets/wishlist_page/home_icon.webp" alt="Home Icon" style="width: 20px; height: 20px;"/>
                                 </a>
                             </li>                            
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
-                                <a href="#" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none" style="font-size: 1rem;">Account</a>
+                                <a href="#" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none fs-6">Account</a>
                             </li>
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
-                                <span class="fw-normal font-poppins text_mainColor mt-1" style="font-size: 1rem;">Create Account</span>
+                                <span class="fw-normal font-poppins text_mainColor mt-1 fs-6">Create Account</span>
                             </li>
                         </ol>
                     </nav>
@@ -313,8 +313,8 @@
                         <div class="col-md-3 col-6 right-side">
                             <h6 class="fw-medium text-white mb-3">My Account</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">My Account</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Order History</a></li>
+                                <li><a href="./dashboard.html" target="_blank" class="text-secondary text-decoration-none">My Account</a></li>
+                                <li><a href="./order_history.html" target="_blank" class="text-secondary text-decoration-none">Order History</a></li>
                                 <li><a href="./shopping_cart.html" target="_blank" class="text-secondary text-decoration-none">Shopping Cart</a></li>
                                 <li><a href="./wishlist.html" target="_blank" class="text-secondary text-decoration-none">Wishlist</a></li>
                             </ul>
@@ -323,9 +323,9 @@
                             <h6 class="fw-medium text-white mb-3">Helps</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
                                 <li><a href="./contact.html" target="_blank" class="text-secondary text-decoration-none">Contact</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Faqs</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Terms & Condition</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Privacy Policy</a></li>
+                                <li><a href="./faqs.html" target="_blank" class="text-secondary text-decoration-none">Faqs</a></li>
+                                <li><a href="./faqs.html" target="_blank" class="text-secondary text-decoration-none">Terms & Condition</a></li>
+                                <li><a href="./faqs.html" target="_blank" class="text-secondary text-decoration-none">Privacy Policy</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-6 right-side">
@@ -333,17 +333,17 @@
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
                                 <li><a href="./aboutUs.html" target="_blank" class="text-secondary text-decoration-none">About</a></li>
                                 <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Shop</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Product</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Track Order</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Product</a></li>
+                                <li><a href="./order_details.html" target="_blank" class="text-secondary text-decoration-none">Track Order</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-6 right-side">
                             <h6 class="fw-medium text-white mb-3">Categories</h6>
                             <ul class="footer_list list-unstyled small fw-normal d-flex flex-column gap-2">
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Fruit & Vegetables</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Meat & Fish</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Bread & Bakery</a></li>
-                                <li><a href="#" target="_blank" class="text-secondary text-decoration-none">Beauty & Health</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Fruit & Vegetables</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Meat & Fish</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Bread & Bakery</a></li>
+                                <li><a href="./shop.html" target="_blank" class="text-secondary text-decoration-none">Beauty & Health</a></li>
                             </ul>
                         </div>
                     </div>    
