Ecopazar Project Full update

--- a/settings.html
+++ b/settings.html
@@ -210,11 +210,11 @@
                         <ol class="breadcrumb d-flex flex-row align-items-center gap-2 mb-0">
                             <li class="breadcrumb-item d-flex align-items-center">
                                 <a href="./index.html">
-                                    <img src="./assets/wishlist_page/home_icon.webp" alt="Home Icon" style="width: 20px; height: 20px;" />
+                                    <img src="./assets/wishlist_page/home_icon.webp" alt="Home Icon" style="width: 20px; height: 20px;"/>
                                 </a>
                             </li>                            
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
-                                <a href="#" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none fs-6">Account</a>
+                                <a href="./dashboard.html" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none fs-6">Account</a>
                             </li>                            
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
                                 <span class="fw-normal font-poppins text_mainColor mt-1 fs-6">Settings</span>
