--- a/sign_up.html
+++ b/sign_up.html
@@ -214,7 +214,7 @@
                                 </a>
                             </li>                            
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
-                                <a href="#" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none fs-6">Account</a>
+                                <a href="./dashboard.html" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none fs-6">Account</a>
                             </li>
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
                                 <span class="fw-normal font-poppins text_mainColor mt-1 fs-6">Create Account</span>
