--- a/faqs.html
+++ b/faqs.html
@@ -222,35 +222,78 @@
             </div>
         </section>
 
-        <section class="sign py-5 d-flex justify-content-center align-items-center font-poppins">
-            <div class="card shadow-lg border-0 p-4">
-                <h2 class="text-center mb-4 fw-semibold">Sign In</h2>
-                <form>               
-                    <div class="mb-2">
-                        <input type="email" class="form-control" placeholder="Email">
-                    </div>
-
-                    <div class="mb-2 position-relative">
-                        <input type="password" class="form-control" placeholder="Password">                        
-                        <i class="fa-regular fa-eye position-absolute top-50 end-0 translate-middle-y me-3"></i>
-                    </div>
-
-                    <div class="d-flex justify-content-between align-items-center mb-3 small">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="rememberMe">
-                            <label class="form-check-label text-muted" for="rememberMe">
-                                Remember me
-                            </label>
+        <section class="py-5">
+            <div class="container font-poppins">
+                <div class="row g-3">
+                    <div class="col-md-6 my-5 py-5">
+                        <h1 class="fw-semibold my-4">Welcome, Let’s Talk About Our Ecobazar</h1>
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                <button class="accordion-button fs-6 fw-medium" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    In elementum est a ante sodales iaculis.
+                                </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                                <div class="accordion-body small fw-normal text-secondary">
+                                    Morbi porttitor ligula in nunc varius sagittis. Proin dui nisi, laoreet ut tempor ac, cursus vitae eros. Cras quis ultricies elit. Proin ac lectus arcu. Maecenas aliquet vel tellus at accumsan. Donec a eros non massa vulputate ornare. Vivamus ornare commodo ante, at commodo felis congue vitae.
+                                </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                <button class="accordion-button collapsed fs-6 fw-medium" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Etiam lobortis massa eu nibh tempor elementum.
+                                </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body small fw-normal text-secondary">
+                                    Morbi porttitor ligula in nunc varius sagittis. Proin dui nisi, laoreet ut tempor ac, cursus vitae eros. Cras quis ultricies elit. Proin ac lectus arcu. Maecenas aliquet vel tellus at accumsan. Donec a eros non massa vulputate ornare. Vivamus ornare commodo ante, at commodo felis congue vitae.
+                                </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                <button class="accordion-button collapsed fs-6 fw-medium" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    In elementum est a ante sodales iaculis.
+                                </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body small fw-normal text-secondary">
+                                    Morbi porttitor ligula in nunc varius sagittis. Proin dui nisi, laoreet ut tempor ac, cursus vitae eros. Cras quis ultricies elit. Proin ac lectus arcu. Maecenas aliquet vel tellus at accumsan. Donec a eros non massa vulputate ornare. Vivamus ornare commodo ante, at commodo felis congue vitae.
+                                </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                <button class="accordion-button collapsed fs-6 fw-medium" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    Aenean quis quam nec lacus semper dignissim.
+                                </button>
+                                </h2>
+                                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body small fw-normal text-secondary">
+                                    Morbi porttitor ligula in nunc varius sagittis. Proin dui nisi, laoreet ut tempor ac, cursus vitae eros. Cras quis ultricies elit. Proin ac lectus arcu. Maecenas aliquet vel tellus at accumsan. Donec a eros non massa vulputate ornare. Vivamus ornare commodo ante, at commodo felis congue vitae.
+                                </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                <button class="accordion-button collapsed fs-6 fw-medium" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                    Nulla tincidunt eros id tempus accumsan.
+                                </button>
+                                </h2>
+                                <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body small fw-normal text-secondary">
+                                    Morbi porttitor ligula in nunc varius sagittis. Proin dui nisi, laoreet ut tempor ac, cursus vitae eros. Cras quis ultricies elit. Proin ac lectus arcu. Maecenas aliquet vel tellus at accumsan. Donec a eros non massa vulputate ornare. Vivamus ornare commodo ante, at commodo felis congue vitae.
+                                </div>
+                                </div>
+                            </div>
                         </div>
-                        <a href="#" class="text-decoration-none text-muted">Forget Password</a>
                     </div>
-
-                    <div class="d-grid mb-3">
-                        <button type="submit" class="btn btn-outline-success bg_mainColor text-white rounded-pill">Login</button>
+                    <div class="col-md-6">
+                        <img src="./assets/general/faq.webp" class="img-fluid" alt="Faqs">
                     </div>
-
-                    <p class="text-muted text-center small mb-0">Don't have account? <a href="./sign_up.html" class="fw-medium text-dark text-decoration-none">Register</a></p>
-                </form>
+                </div>
             </div>
         </section>
 
