--- a/order_details.html
+++ b/order_details.html
@@ -214,7 +214,7 @@
                                 </a>
                             </li>                            
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
-                                <a href="#" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none fs-6">Account</a>
+                                <a href="./dashboard.html" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none fs-6">Account</a>
                             </li>
                             <li class="breadcrumb-item active d-flex align-items-center" aria-current="page">
                                 <a href="./order_history.html" class="fw-normal font-poppins text-secondary mt-1 text-decoration-none fs-6">Order History</a>
