`Update checkout and cart links in multiple HTML files to point to correct URLs`

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                         <span class="fw-semibold text-dark">$26.00</span>
                     </div>
                     <div class="offCanvas_btns d-flex flex-column gap-2">
-                        <a href="#" target="_blank" class="btn checkout_btn bg_mainColor text-white rounded-pill fw-semibold">Checkout</a>
-                        <a href="#" target="_blank" class="btn go_cart_btn text_mainColor rounded-pill fw-semibold">Go To Cart</a>
+                        <a href="./checkout.html" target="_blank" class="btn checkout_btn bg_mainColor text-white rounded-pill fw-semibold">Checkout</a>
+                        <a href="./shopping_cart.html" target="_blank" class="btn go_cart_btn text_mainColor rounded-pill fw-semibold">Go To Cart</a>
                     </div>
                 </div>
             </div>
