--- a/product_details.html
+++ b/product_details.html
@@ -193,7 +193,7 @@
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                 </ul>
-                <span class="navbar-text text-white">
+                <span class="navbar-text">
                     <img src="./assets/general/PhoneCall.webp" alt="Phone Call Icon">
                     (219) 555-0114
                 </span>
